--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "firebase": "^9.17.2",
     "lodash.debounce": "^4.0.8",
+    "lodash.kebabcase": "^4.1.1",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
-    "react-hot-toast": "^2.4.0"
+    "react-hook-form": "^7.43.8",
+    "react-hot-toast": "^2.4.0",
+    "react-markdown": "^8.0.6"
   }
 }
